# LIME-neon-openmp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  lime_OpenMP.cpp  lime_neon.cpp  lime_neon_OpenMP.cpp  lime_openmp1.cpp  lime_openmp2.cpp
test/: LIME.cpp
